styles.scss
/* Colour variables */
$main-font-color: #222222;
$background: #ffffff;
$brand-color: #025b9f;
$accent-color: #025b9f;
$secondary-color: #d44619;
$accent-background: #EDF5F8;

html {
  box-sizing: border-box;
}
*,
*:before,
*:after {
  box-sizing: inherit;
}
.clearfix:after {
  visibility: hidden;
  display: block;
  font-size: 0;
  content: " ";
  clear: both;
  height: 0;
}
* html .clearfix {
  zoom: 1;
} /* IE6 */
*:first-child + html .clearfix {
  zoom: 1;
} /* IE7 */

html,
body {
  margin: 0;
}

/* fonts */
h1 {
  color: white;
  font-family: "League Spartan", "Open Sans", sans-serif;
  font-size: 138px;
  font-weight: 600;
  margin: 100px 0 20px;
  white-space: nowrap;
  letter-spacing: -0.03em;
}
.conduct h1 {
  white-space: normal;
}
h2,
h3,
h4 {
  font-family: "Open Sans", sans-serif;
  font-weight: 400;
  margin: 0;
  position: relative;
  color: $secondary-color;
  font-size: 30px;
}
h4 {
  font-size: 24px;
  padding-top: 24px;
}
h2:before,
h3:before {
  content: "/";
  position: absolute;
  left: -25px;
  color: $accent-color;
}
.speakersPage h2 {
  margin-bottom: 20px;
  position: relative;
}
p {
  color: $main-font-color;
  font-family: "Open Sans", sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
}
a {
  font-size: 16px;
  font-family: "Open Sans", sans-serif;
  color: $brand-color;
  text-decoration: none;
  border-bottom: 2px solid $secondary-color;
  transition: 0.3s all;
}
a:hover,
a:focus,
a:active {
  border-bottom: 0;
  color: $secondary-color;
}
.site-header a.current-page {
  border-bottom: 2px solid $secondary-color;
  color: $secondary-color;
  font-weight: bold;
}
a.current-page {
  border: 0;
  color: $secondary-color;
  font-weight: bold;
}

/* header */
.site-header {
  background: $brand-color;
}
.event-branding {
  background: $background;
  border-bottom: 3px solid $accent-color;
  padding: 24px 5%;
}
.branding {
  height: auto;
  padding-top: 10px;
  width: 180px;
}
.event-detail {
  width: 63%;
  margin: 0 auto;
}
header p {
  color: white;
  font-family: "Open Sans", sans-serif;
  font-size: 48px;
  font-weight: 600;
  margin: 0 auto;
  line-height: 60px;
}
header p.location {
  font-weight: 100;
}
header p.subtitle {
  font-size: 24px;
  padding: 60px 0 100px;
  font-weight: 400;
}

/* nav */
.main-navigation {
  float: right;
  padding-bottom: 4px;
}
.nav-menu ul {
  margin: 0;
}
.nav-menu li {
  border: none;
  margin-left: 20px;
  float: left;
  position: relative;
}
.nav-menu a {
  color: $main-font-color;
  border-bottom: 0;
}
.nav-menu a:hover,
.nav-menu a:active,
.nav-menu a:focus {
  color: $brand-color;
  border-bottom: 0;
}
.tickets a {
  background: $brand-color;
  border: 0;
  border-radius: 25px;
  color: $background;
  padding: 8px 15px;
  white-space: nowrap;
}
.tickets a:hover,
.tickets a:active,
.tickets a:focus {
  border: 0;
  color: $background;
}

/* sections */
section {
  padding: 40px;
}
section .textWrapper {
  width: 60%;
  margin: 0 auto;
}
.embed-container { 
  position: relative; 
  padding-bottom: 56.25%; 
  height: 0; 
  overflow: hidden; 
  max-width: 100%; 
  height: auto; 
  margin: 40px 0;
} 
.embed-container iframe, 
.embed-container object, 
.embed-container embed { 
  position: absolute; 
  top: 0; 
  left: 0; 
  width: 100%; 
  height: 100%; 
}

.event,
main {
  background: $accent-background;
}

.travel h3 {
  padding-bottom: 30px;
}
.talk {
  padding-bottom: 10px;
}
.talkDesc {
  padding-bottom: 30px;
}

.google-maps {
  position: relative;
  padding-bottom: 75%; // This is the aspect ratio
  height: 0;
  overflow: hidden;
}
.google-maps iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100% !important;
  height: 100% !important;
}
.travel,
.partners {
  background: $background;
}

.home .partners {
  padding-top: 0;
}

section p span {
  font-size: 20px;
  font-weight: 600;
}
ul {
  list-style: none;
  margin: 0;
  padding: 0;
}
li {
  font-size: 20px;
  font-weight: 600;
  border-bottom: 2px solid #ccc;
  color: $main-font-color;
  font-family: "Open Sans", sans-serif;
  font-weight: 400;
  line-height: 58px;
}
.sponsors,
.partners {
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -ms-flex-pack: distribute;
  justify-content: space-around;
  -ms-flex-align: center;
  align-items: center;
  flex-wrap: wrap;
}
.logo {
  width: 100%;
  padding: 20px 40px;
}
.twitterHandle {
  font-size: 16px;
}
.llc {
  font-size: 18px;
  font-weight: 900;
  margin-top: -10px;
  text-align: center;
}
.diamond_sponsor {
  height: auto;
  max-width: 450px;
}

/* footer */
footer {
  background: $accent-background;
}
footer p {
  color: $main-font-color;
  margin: 0;
  padding: 30px 0 40px;
  position: relative;
  left: 7%;
  display: inline-block;
}

/* speakers page */
.speakers header {
  min-height: auto;
  background: white;
}
.speakers h1,
.talks h1,
.playlist h1,
.organizers h1,
.conduct h1 {
  color: $brand-color;
  margin: 0;
  position: relative;
}
.conduct h1 {
  line-height: 0.9em;
  padding: 20px 0;
}
.speakers h1:before,
.talks h1:before,
.playlist h1:before,
.organizers h1:before,
.conduct h1:before {
  content: "/";
  position: absolute;
  left: -75px;
  color: $secondary-color;
}
.speakers h2 {
  margin-bottom: 20px;
}
.talks .talk {
  /*border-top: 2px solid #fff;*/
  border-top: 1px solid $brand-color;
  padding-top: 40px;
}
.speakers .speaker-detail,
.talks .speaker-detail {
  min-height: 180px;
  padding: 0 0 0 200px;
  position: relative;
}
.speakers .speaker-detail img,
.talks .speaker-detail img {
  max-width: 170px;
  position: absolute;
  top: 10px;
  left: 0;
  border-radius: 50%;
}
.speaker-detail p {
  margin: 0 auto;
}
.speakers .subtitle {
  margin: 20px auto 60px;
}
.speakers .speaker-detail,
.talks .speaker-detail {
  margin-bottom: 50px;
}
/* SCHEDULE PAGE */

.scheduleList {
  border-left: 1px solid $brand-color;
  padding: 0 20px;
  list-style: none;
}
.scheduleList li {
  border: 0;
  margin-bottom: 40px;
}
.scheduleList .event:before {
  content: "";
  position: absolute;
  left: -29px;
  display: inline-block;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  top: 8px;
}
.session:before {
  border: 1px solid $brand-color;
  background-color: $brand-color;
}
.break:before,
.lunch:before {
  border: 1px solid $secondary-color;
  background-color: $secondary-color;
}
.scheduleList h3 {
  color: $brand-color;
  font-size: 18px;
  font-weight: 800;
  line-height: 30px;
  margin-bottom: 12px;
  text-transform: capitalize;
}
.scheduleList .event:before {
  content: " ";
  display: block;
}
.scheduleList .time {
  position: relative;
}
.scheduleList .speaker,
.scheduleList .speakers {
  display: block;
}
.scheduleList .break,
.scheduleList .lunch {
  color: $secondary-color;
  font-size: 16px;
}

/*organizers page*/
.organizersList {
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flex;
  display: -o-flex;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}
.organizersList li {
  border: 0;
}
.organizer-detail {
  text-align: center;
  margin: 20px;
}
.organizer-detail p {
  margin: 0;
}
.organizer-detail img {
  max-width: 200px;
  border-radius: 50%;
}

@media (max-width: 1180px) {
  h1 {
    font-size: 9.5vw;
    margin: 8vw 0 6.5vw;
  }
/*
  p,
  a {
    // font-size: 2.55vw;
    line-height: 4vw;
  }

	header {
		min-height: 35vw;
	}*/

  header p {
    font-size: 4.5vw;
    line-height: 5.8vw;
  }

  header p.subtitle {
    font-size: 3vw;
    line-height: 4.5vw;
    padding: 6vw 0 8vw;
  }
  .speakers header {
    min-height: auto;
  }
  .speakers .speaker-detail,
  .talks .speaker-detail {
    padding: 0;
  }
  .speakers .speaker-detail img,
  .talks .speaker-detail img {
    max-width: 220px;
    padding: 20px 0;
    display: block;
    margin: 0 auto;
    position: relative;
    top: 0;
  }
}
/* end media query 1180px */

@media (max-width: 620px) {
  header .text-wrapper {
    width: 100%;
    padding: 0 10.5vw;
  }

  section {
    padding: 8vw 10.5vw;
  }

  section .textWrapper {
    width: 100%;
  }

  h2,
  h3 {
    font-size: 6vw;
  }

  p,
  a {
    font-size: 4.6vw;
    line-height: 6.5vw;
  }
  .event-branding {
    text-align: center;
    padding: 15px 2% 0;
  }
  .branding {
    padding: 10px 0 0;
  }
  .main-navigation {
    float: none;
    right: 0;
  }
  .nav-menu {
    display: flex;
    justify-content: space-around;
  }
  footer p {
    left: initial;
    padding: 25px 8vw;
  }
}
/* end media query 620px */


@media (max-width: 340px) {
  .nav-menu {
    display: block;
  }
  .nav-menu li {
    float: none;
  }
}
/* end media query 340px */

